fix card on board display on Firefox

--- a/src/css/components/game/card/card-art.component.scss
+++ b/src/css/components/game/card/card-art.component.scss
@@ -15,6 +15,7 @@
 	top: -17%;
 	left: 2%;
 	object-fit: contain;
+	flex-shrink: 0;
 
 	&.minion {
 		clip-path: ellipse(37% 27% at 50% 50%);
